tests/baselines/reference/unusedInterfaceinNamespace3.errors.txt
unusedInterfaceinNamespace3.ts(10,15): error TS6196: 'i3' is declared but never used.


==== unusedInterfaceinNamespace3.ts (1 errors) ====
    namespace Validation {
        interface i1 {
    
        }
    
        export interface i2 {
    
        }
    
        interface i3 extends i1 {
                  ~~
!!! error TS6196: 'i3' is declared but never used.
    
        }
    }